# rv1106_camera

./: CMakeLists.txt  README.md
.marscode/: deviceInfo.json
example/: 1：H264编码示例.cpp  2：OpenCV结合MPI本地推流示例.cpp  testaudio.c
include/: main.h
include/app/: app_controller.h
include/core/: core_video_init.h  core_video_run.h
include/driver/: isp_init.h  venc_init.h  vi_init.h
include/infra/: logger.h
src/: 111.c  main.c  main.cpp
src/app/: app_controller.cpp
src/core/: core_video_init.cpp  core_video_run.cpp
src/driver/: isp_driver.cpp  venc_driver.cpp  vi_driver.cpp
src/infra/: logger.c
